0.2.3-dev
---------

Bug fixes:

* Support pointer to arrays as function arguments

0.2.2
-----

Features:

* Support for variadic functions
* Official support of the library for Linux/AArch64

Improvements:

* Use the real C basic types as DFFI's basic types. This has a side effect that
  stdint.h isn't needed anymore for the wrappers code!
* Python bindings: create a union object from its python type

Bug fixes:

* Some functions (like malloc, printf, ...) that are pre-declared by clang
  weren't considered by cdef
* Support inline functions in cdef
* Fix support for (u)int128_t and complex types!

0.2.1
-----

Features:

* Support for Windows 10 x64, with bindings for Python 3

0.2.0
-----

Features:

* Support for the C99 boolean type
* Support for OSX x86 32/64 bits
* Support for Linux x86 32 bits
* Support for typedefs in cdef

Bug fixes:

* the UnknownField and AllocError exceptions were not registered in pybind11
* an invalid triple was potentially used by the LLVM JITer
* {Complex,}Float{32,64,128} are renamed into
  {Complex,}{Float,Double,LongDouble} (closer to the C reality)

0.1.0
-----

Initial version